--- a/StockAnalysis/Views/Home/Contact.cshtml
+++ b/StockAnalysis/Views/Home/Contact.cshtml
@@ -9,15 +9,11 @@
 
 <section class="contact">
     <header>
-        <h3>Phone</h3>
+        <h3>Website</h3>
     </header>
     <p>
-        <span class="label">Main:</span>
-        <span>425.555.0100</span>
-    </p>
-    <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
+        <span class="label">Link:</span>
+        <span><a href="mailto:Support@example.com">eric@ericsingh.com</a></span>
     </p>
 </section>
 
@@ -26,25 +22,7 @@
         <h3>Email</h3>
     </header>
     <p>
-        <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
-    </p>
-</section>
-
-<section class="contact">
-    <header>
-        <h3>Address</h3>
-    </header>
-    <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+        <span class="label">Link:</span>
+        <span><a href="mailto:Support@example.com">eric@ericsingh.com</a></span>
     </p>
 </section>
