--- a/StockAnalysis/Views/Stock/Stocks.cshtml
+++ b/StockAnalysis/Views/Stock/Stocks.cshtml
@@ -43,9 +43,12 @@
         <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
     </li>
 </ol>*@
-<h1>Test</h1>
+<h1>Stock Information</h1>
 <table style="width:100%">
+    @foreach(var stock in Model)
+    { 
     <tr>
-        <td>@ViewBag.Test</td>
+        <td>@stock.StockSymbol</td>
     </tr>
+    }
 </table>
