--- a/StockAnalysis/Views/Stock/Stocks.cshtml
+++ b/StockAnalysis/Views/Stock/Stocks.cshtml
@@ -26,7 +26,7 @@
     {
         @Html.ValidationSummary(true)
         <fieldset>
-            Select a file <input type="text" name="stockSymbol" />
+            Enter stock symbol <input type="text" name="stockSymbol" />
             <input type="submit" value="Submit" />
         </fieldset>
     }
@@ -62,6 +62,7 @@
     { 
     <tr>
         <td>@stock.StockSymbol</td>
+        <td>@stock.Name</td>
         <td>@stock.StockPrice</td>
         <td>@stock.PERatio</td>
         <td>@stock.MarketCap</td>
