--- a/StockAnalysis/Views/Stock/Stocks.cshtml
+++ b/StockAnalysis/Views/Stock/Stocks.cshtml
@@ -70,6 +70,7 @@
         <td>@stock.YearHigh</td>
         <td>@stock.Dividend</td>
         <td>@stock.TargetPrice</td>
+        <td><input type="button" value="Remove" onclick="location.href='@Url.Action("RemoveStock", "Stock", new { stockSymbol = @stock.StockSymbol })'" /></td>
     </tr>
     }
 </table>
