--- a/StockAnalysis/Views/Home/Contact.cshtml
+++ b/StockAnalysis/Views/Home/Contact.cshtml
@@ -13,7 +13,7 @@
     </header>
     <p>
         <span class="label">Link:</span>
-        <span><a href="mailto:Support@example.com">eric@ericsingh.com</a></span>
+        <span><a href="www.ericsingh.com">ericsingh.com</a></span>
     </p>
 </section>
 
