--- a/StockAnalysis/Content/Site.css
+++ b/StockAnalysis/Content/Site.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #fff;
+    background-color: #000;
     border-top: solid 10px #000;
     color: #333;
     font-size: .85em;
@@ -104,18 +104,19 @@ h5, h6 {
     padding-bottom: 35px;
 }
 
-    .main-content {
-        background: url("../Images/accent.png") no-repeat;
-        padding-left: 10px;
-        padding-top: 30px;
-    }
+.main-content {
+    /*background: url("../Images/accent.png") no-repeat;*/
+    padding-left: 10px;
+    /*padding-top: 30px;*/
+    padding-top: 1px;
+}
 
-    .featured + .main-content {
-        background: url("../Images/heroAccent.png") no-repeat;
-    }
+.featured + .main-content {
+    background: url("../Images/heroAccent.png") no-repeat;
+}
 
 header .content-wrapper {
-    padding-top: 20px; 
+    padding-top: 20px;
 }
 
 footer {
@@ -135,12 +136,12 @@ footer {
     margin: 0;
 }
 
-.site-title a, .site-title a:hover, .site-title a:active {
-    background: none;
-    color: #c8c8c8;
-    outline: none;
-    text-decoration: none;
-}
+    .site-title a, .site-title a:hover, .site-title a:active {
+        background: none;
+        color: #c8c8c8;
+        outline: none;
+        text-decoration: none;
+    }
 
 
 /* login
@@ -160,12 +161,13 @@ footer {
         text-decoration: none;
     }
 
-    #login a.username {
-        background: none;
-        margin: 0;
-        padding: 0;
-        text-decoration: underline;
-    }
+        #login a.username {
+            background: none;
+            margin: 0;
+            padding: 0;
+            text-decoration: underline;
+            color: #fff;
+        }
 
     #login ul {
         margin: 0;
@@ -199,10 +201,10 @@ ul#menu {
             text-decoration: none;
         }
 
-        ul#menu li a:hover {
-            color: #333;
-            text-decoration: none;
-        }
+            ul#menu li a:hover {
+                color: #fff;
+                text-decoration: none;
+            }
 
 
 /* page elements
@@ -223,27 +225,27 @@ ul#menu {
         padding: 20px 40px 30px 40px;
     }
 
-        .featured hgroup.title h1, .featured hgroup.title h2 {
-            color: #fff;
-        }
+    .featured hgroup.title h1, .featured hgroup.title h2 {
+        color: #fff;
+    }
 
-        .featured p {
-            font-size: 1.1em;
-        }
+    .featured p {
+        font-size: 1.1em;
+    }
 
 /* page titles */
 hgroup.title {
     margin-bottom: 10px;
 }
 
-hgroup.title h1, hgroup.title h2 {
-    display: inline;
-}
+    hgroup.title h1, hgroup.title h2 {
+        display: inline;
+    }
 
-hgroup.title h2 {
-    font-weight: normal;
-    margin-left: 3px;
-}
+    hgroup.title h2 {
+        font-weight: normal;
+        margin-left: 3px;
+    }
 
 /* features */
 section.feature {
@@ -355,12 +357,12 @@ aside {
         width: 250px;
     }
 
-    #loginForm input[type="checkbox"],
-    #loginForm input[type="submit"],
-    #loginForm input[type="button"],
-    #loginForm button {
-        width: auto;
-    }
+        #loginForm input[type="checkbox"],
+        #loginForm input[type="submit"],
+        #loginForm input[type="button"],
+        #loginForm button {
+            width: auto;
+        }
 
 #socialLoginForm {
     margin-left: 40px;
@@ -369,7 +371,7 @@ aside {
 }
 
     #socialLoginForm h2 {
-        margin-bottom:  5px;
+        margin-bottom: 5px;
     }
 
 #socialLoginList button {
@@ -420,22 +422,22 @@ label {
     font-weight: 600;
 }
 
-label.checkbox {
-    display: inline;
-}
+    label.checkbox {
+        display: inline;
+    }
 
-label.inputLabel{
-    display: inline-block;
-    float: left;
-    clear: left;
-    width: 150px;
-    text-align: left;
-}
+    label.inputLabel {
+        display: inline-block;
+        float: left;
+        clear: left;
+        width: 150px;
+        text-align: left;
+    }
 
 input .rightAlign {
     display: inline-block;
     float: left;
-} 
+}
 
 input, textarea {
     border: 1px solid #e2e2e2;
@@ -456,32 +458,32 @@ textarea {
         border: 1px solid #7ac0da;
     }
 
-    input[type="checkbox"] {
-        background: transparent;
-        border: inherit;
-        width: auto;
-    }
+input[type="checkbox"] {
+    background: transparent;
+    border: inherit;
+    width: auto;
+}
 
-    input[type="submit"],
-    input[type="button"],
-    button {
-        background-color: #d3dce0;
-        border: 1px solid #787878;
-        cursor: pointer;
-        font-size: 1.2em;
-        font-weight: 600;
-        padding: 7px;
-        margin-right: 8px;
-        width: auto;
-    }
+input[type="submit"],
+input[type="button"],
+button {
+    background-color: #d3dce0;
+    border: 1px solid #787878;
+    cursor: pointer;
+    font-size: 1.2em;
+    font-weight: 600;
+    padding: 7px;
+    margin-right: 8px;
+    width: auto;
+}
 
-    td input[type="submit"],
-    td input[type="button"],
-    td button {
-        font-size: 1em;
-        padding: 4px;
-        margin-right: 4px;
-    }
+td input[type="submit"],
+td input[type="button"],
+td button {
+    font-size: 1em;
+    padding: 4px;
+    margin-right: 4px;
+}
 
 /* info and errors */
 .message-info {
@@ -559,36 +561,36 @@ th {
         position: relative;
     }
 
-    th a:link, th a:visited, th a:active, th a:hover {
-        color: #333;
-        font-weight: 600;
-        text-decoration: none;
-        padding: 0;
-    }
+        th a:link, th a:visited, th a:active, th a:hover {
+            color: #333;
+            font-weight: 600;
+            text-decoration: none;
+            padding: 0;
+        }
 
-    th a:hover {
-        color: #000;
-    }
+        th a:hover {
+            color: #000;
+        }
 
     th.asc a, th.desc a {
         margin-right: .75em;
     }
 
-    th.asc a:after, th.desc a:after {
-        display: block;
-        position: absolute;
-        right: 0em;
-        top: 0;
-        font-size: 0.75em;
-    }
+        th.asc a:after, th.desc a:after {
+            display: block;
+            position: absolute;
+            right: 0em;
+            top: 0;
+            font-size: 0.75em;
+        }
 
-    th.asc a:after {
-        content: '▲';
-    }
+        th.asc a:after {
+            content: '▲';
+        }
 
-    th.desc a:after {
-        content: '▼';
-    }
+        th.desc a:after {
+            content: '▼';
+        }
 
 td {
     padding: 0.25em 2em 0.25em 0em;
@@ -598,6 +600,98 @@ td {
 tr.pager td {
     padding: 0 0.25em 0 0;
 }
+
+/* liScroll styles */
+
+/* ticker
+----------------------------------------------------------*/
+/*.tickeroverlay-left {
+    background-image: url('left.png');
+    display: block;
+    pointer-events: none;
+    position: absolute;
+    z-index: 30;
+    height: 12px;
+    width: 150px;
+    top: 0;
+    left: -2px;
+}
+
+.tickeroverlay-right {
+    background-image: url('right.png');
+    display: block;
+    pointer-events: none;
+    position: absolute;
+    z-index: 30;
+    height: 12px;
+    width: 150px;
+    top: 0;
+    right: -2px;
+}*/
+
+.tickercontainer { /* the outer div */
+    background: #000;
+    width: auto;
+    height: 32px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    color: #fff;
+}
+
+    .tickercontainer .mask { /* that serves as a mask. so you get a sort of padding both left and right */
+        position: relative;
+        padding-left: 10px;
+        padding-right: 10px;
+        top: 8px;
+        height: 18px;
+        /*width: 718px;*/
+        overflow: hidden;
+    }
+
+ul.newsticker {
+    /*Transitions have been added in order set css3 transitions; and have linear easing. Changing these lines you might have unexpected results */
+    -webkit-transition: all 0s linear;
+    -moz-transition: all 0s linear;
+    -o-transition: all 0s linear;
+    transition: all 0s linear;
+    position: relative;
+    margin-left: 20px;
+    font: bold 14px Verdana;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+    ul.newsticker li {
+        float: left; /* important: display inline gives incorrect results when you check for elem's width */
+        margin: 0;
+        padding-right: 15px;
+        /*background: #fff;*/
+    }
+
+    ul.newsticker a {
+        white-space: nowrap;
+        padding: 0;
+        color: #ff0000;
+        font: bold 14px Verdana;
+        margin: 0 50px 0 0;
+    }
+
+    ul.newsticker span {
+        margin: 0 10px 0 0;
+    }
+
+#webticker2 {
+    float: right;
+}
+
+    #webticker2 li {
+        float: right; /* important: display inline gives incorrect results when you check for elem's width */
+        margin: 0;
+        padding-left: 15px;
+        /*background: #fff;*/
+    }
 
 
 /********************
@@ -645,9 +739,9 @@ tr.pager td {
             padding: 0;
         }
 
-        #login a:hover {
-            color: #333;
-        }
+            #login a:hover {
+                color: #333;
+            }
 
     /* menu */
     nav {
@@ -712,12 +806,12 @@ tr.pager td {
                 background: none;
             }
 
-     /* features */
-     section.feature {
+    /* features */
+    section.feature {
         float: none;
         padding: 10px;
         width: auto;
-     }
+    }
 
         section.feature img {
             color: #999;
@@ -731,10 +825,10 @@ tr.pager td {
         width: 90%;
     }
 
-    input .rightAlign {
-        display: inline-block;
-        float: left;
-    }    
+        input .rightAlign {
+            display: inline-block;
+            float: left;
+        }
 
     /* login page */
     #loginForm {
