--- a/StockAnalysis/Views/Shared/_Layout.cshtml
+++ b/StockAnalysis/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("Stock Analysis", "Index", "Home")</p>
+                    <p class="site-title">@Html.ActionLink("Stock Analysis", "Stocks", "Stock")</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
@@ -20,7 +20,7 @@
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                             <li>@Html.ActionLink("Stocks", "Stocks", "Stock")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
