--- a/StockAnalysis/Views/Stock/Stocks.cshtml
+++ b/StockAnalysis/Views/Stock/Stocks.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section scripts {
-    @Scripts.Render("/Scripts/webticker.js")
+    @Scripts.Render("~/Scripts/webticker.js")
     <script src="/Scripts/webticker.js"></script>
     <script>
         $(document).ready(function () {
