Added stock chart

--- a/StockAnalysis/Views/Home/About.cshtml
+++ b/StockAnalysis/Views/Home/About.cshtml
@@ -9,11 +9,11 @@
 
 <article>
     <p>
-        Use this area to provide additional information.
+        Welcome to the StockAnalysis web app!
     </p>
 
     <p>
-        Use this area to provide additional information.
+        This application can be used to track your stock purchases and performance.<br /> You can also track stocks that you are interested in purchasing in the future.
     </p>
 
     <p>
