Added drop down for chart

--- a/StockAnalysis/Content/Site.css
+++ b/StockAnalysis/Content/Site.css
@@ -126,6 +126,14 @@ footer {
     height: 100px;
 }
 
+#marginTop{
+    margin-top: 10px;
+}
+
+#chart{
+    margin-top: 10px;
+}
+
 
 /* site title
 ----------------------------------------------------------*/
