--- a/StockAnalysis/Content/Site.css
+++ b/StockAnalysis/Content/Site.css
@@ -134,6 +134,9 @@ footer {
     margin-top: 10px;
 }
 
+/*#SelectedStock, #ChartTimeRange {
+
+}*/
 
 /* site title
 ----------------------------------------------------------*/
