--- a/StockAnalysis/Views/Home/About.cshtml
+++ b/StockAnalysis/Views/Home/About.cshtml
@@ -21,7 +21,7 @@
     </p>
 </article>
 
-<aside>
+@*<aside>
     <h3>Aside Title</h3>
     <p>
         Use this area to provide additional information.
@@ -31,4 +31,4 @@
         <li>@Html.ActionLink("About", "About", "Home")</li>
         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
     </ul>
-</aside>
+</aside>*@
