--- a/StockAnalysis/Content/Site.css
+++ b/StockAnalysis/Content/Site.css
@@ -441,8 +441,9 @@ label {
         display: inline-block;
         float: left;
         clear: left;
-        width: 150px;
+        width: 175px;
         text-align: left;
+        padding-top: 5px;
     }
 
 input .rightAlign {
@@ -486,6 +487,23 @@ button {
     padding: 7px;
     margin-right: 8px;
     width: auto;
+}
+
+input[class="hoverEffect"] {
+  background-color: #009ac9;
+  border: 1px solid transparent;
+  color: #000;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+input[class="hoverEffect"]:hover {
+  background-color: #ffffff;
+  color: #009ac9;
+  border-color: #009ac9;
 }
 
 td input[type="submit"],
@@ -554,10 +572,15 @@ input[type="checkbox"].input-validation-error {
 /* tables
 ----------------------------------------------------------*/
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    margin-top: 0.75em;
+    /*border-collapse: collapse;
+    border-spacing: 0;*/
+    padding-top: 20px;
     border: 0 none;
+    width: 100%;
+}
+
+thead tr {
+    font-weight: bold;
 }
 
 th {
@@ -616,29 +639,6 @@ tr.pager td {
 
 /* ticker
 ----------------------------------------------------------*/
-/*.tickeroverlay-left {
-    background-image: url('left.png');
-    display: block;
-    pointer-events: none;
-    position: absolute;
-    z-index: 30;
-    height: 12px;
-    width: 150px;
-    top: 0;
-    left: -2px;
-}
-
-.tickeroverlay-right {
-    background-image: url('right.png');
-    display: block;
-    pointer-events: none;
-    position: absolute;
-    z-index: 30;
-    height: 12px;
-    width: 150px;
-    top: 0;
-    right: -2px;
-}*/
 
 .tickercontainer { /* the outer div */
     background: #000;
@@ -650,15 +650,15 @@ tr.pager td {
     color: #fff;
 }
 
-    .tickercontainer .mask { /* that serves as a mask. so you get a sort of padding both left and right */
-        position: relative;
-        padding-left: 10px;
-        padding-right: 10px;
-        top: 8px;
-        height: 18px;
-        /*width: 718px;*/
-        overflow: hidden;
-    }
+.tickercontainer .mask { /* that serves as a mask. so you get a sort of padding both left and right */
+    position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
+    top: 8px;
+    height: 18px;
+    /*width: 718px;*/
+    overflow: hidden;
+}
 
 ul.newsticker {
     /*Transitions have been added in order set css3 transitions; and have linear easing. Changing these lines you might have unexpected results */
